#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-23
2014-11-11 Mikhail S. Dubrovin	
- CalibParsStore.h, GenericCalibPars.cpp - improve all info-printout under control of print_bits (PSAS-44)
	
Tag: V00-02-22
2014-11-06 Mikhail S. Dubrovin	
- GeometryAccess(.cpp and .py) - in file input add protection for non-complete comment string (PSAS-11)

Tag: V00-02-21
2014-11-05 Mikhail S. Dubrovin	
- In CalibParsStore.h, GenericCalibPars.cpp - add support for Epix100a (PSAS-7)
	
Tag: V00-02-20
2014-11-04 Mikhail S. Dubrovin	
- Add geometry support for Epix100 (see PSAS-11)
- SegGeometryCspad2x1V1.py - move common methods to SegGeometry.py, improve self-documentation
- add SegGeometryEpix100V1(.py, .cpp, .h)
- in SegGeometryStore(.py, .h) add SegGeometryEpix100V1
- test/ex_seg_geometry_store.cpp - updated for epix100
	
Tag: V00-02-19
2014-10-17 Mikhail S. Dubrovin	
- GeometryObject - shuffle cspad2x2 pixel only if size==2*185*388 and oname=="CSPAD2X2V1"

Tag: V00-02-18
2014-10-07 Mikhail S. Dubrovin
- GeometryAccess.py - improve documentation for Sphinx 
	
Tag: V00-02-17
2014-10-02 Mikhail S. Dubrovin
- In GeometryObject - add global methods det_shape(arr), data2x2ToTwo2x1(arr2x2), two2x1ToData2x2(arrTwo2x1)
	- now methods return ndarrays through det_shape(arr), which shaffles pixels for cspad2x2
	- add test plot of cspad2x2 in ex_geometry_access.cpp and GeometryAccess.py
- add GlobalMethods.h
	
Tag: V00-02-16
2014-09-30 Mikhail S. Dubrovin
- In SegGeometry.(py,h), SegGeometryCspad2x1V1.(py,h,cpp) add method pixel_mask_array(mbits=0377), update example in *.py 